Include toastr for messages

--- a/Client/Partials/testBuilder.html
+++ b/Client/Partials/testBuilder.html
@@ -13,9 +13,9 @@
             <input type="file" id="fileJson" fileread="fileread" filename="filename" multiple >
         </div>
         <div id="cLeft">
-            <label for="txtoutput" >Select Output Foler&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </label>
+            <!--<label for="txtoutput" >Select Output Foler&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp </label>
             <input type="text" id="txtoutput" placeholder="Output Folder">
-            <input type="button" value="..." id="btnJson">
+            <input type="button" value="..." id="btnJson">-->
             <input type="file" id="fileoutput">
             <a href="\Server\specs\JasmineSpecs.zip"  ng-show="genFileShow" download >Jasmine Specs</a>
         </div>
